--- a/LibraryTestAppMaui/LibraryTestAppMaui.iOS/LibraryTestAppMaui.iOS.csproj
+++ b/LibraryTestAppMaui/LibraryTestAppMaui.iOS/LibraryTestAppMaui.iOS.csproj
@@ -125,4 +125,7 @@
   <ItemGroup>
     <ProjectReference Include="..\LibraryTestAppMaui\LibraryTestAppMaui.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Maui" Version="6.1.0" />
+  </ItemGroup>
 </Project>
